--- a/netlify.toml
+++ b/netlify.toml
@@ -3,8 +3,8 @@
   command = "bundle exec jekyll build"
 
 [build.environment]
-  RUBY_VERSION = "2.7.0"
-  BUNDLE_VERSION = "2.3.0"
+  RUBY_VERSION = "3.2.2"
+  BUNDLE_VERSION = "2.5.9"
 
 [[plugins]]
   package = "netlify-plugin-ruby"
@@ -23,7 +23,7 @@
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
-    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://www.google-analytics.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://www.google-analytics.com;"
+    Content-Security-Policy = "default-src 'self'; script-src 'self' https://www.googletagmanager.com https://www.google-analytics.com; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://www.google-analytics.com;"
 
 # Cache static assets
 [[headers]]
