--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ social:
 
 # Author settings
 author:
-  name: Rebecca M
+  name: Rebecca Mola
   email: contact@wildimaginationpress.com
   twitter: wildimaginationpress
 
