Corrected google rich results

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ author:
   name: Rebecca Mola
   email: contact@wildimaginationpress.com
   twitter: wildimaginationpress
+  url: https://wildimaginationpress.com/author/
 
 # Build settings
 markdown: kramdown
