--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
 # Build settings
 markdown: kramdown
 highlighter: rouge
-permalink: pretty
+permalink: /blog/:categories/:year/:month/:day/:title/
 excerpt_separator: <!--more-->
 plugins:
   - jekyll-sitemap
