Google console fix

--- a/_config.yml
+++ b/_config.yml
@@ -86,6 +86,9 @@ exclude:
   - README.md
   - LICENSE
   - WARP.md
+  - CLAUDE.md
+  - docs/
+  - .todo/
   - node_modules/
   - vendor/bundle/
   - vendor/cache/
