--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ show_excerpts: true
 collections:
   books:
     output: true
-    permalink: /books/:name/
+    permalink: /:collection/:name/
   authors:
     output: true
     permalink: /author/:name/
