--- a/_data/reviews.yml
+++ b/_data/reviews.yml
@@ -99,7 +99,7 @@ bushlandia-magic-imagination-australian-bush:
     verified_purchase: true
     source: "Amazon"
     url: "https://www.amazon.com.au/gp/customer-reviews/RHE896QXWM8NJ"
-  - reviewer_name: "Shirley"
+  - reviewer_name: "Shirley Wood"
     rating: 5
     title: ""
     text: "Bushlandia is an enjoyable and meaningful story that inspires friendship, adventure, imagination and love for the environment. It reminded me of my own childhood experiences exploring bushland and creating adventures with my friends."
